# intraday-momentum

./: .gitignore  README.md  main.py  pyproject.toml  testt.py
data/cleaned/: SPY_daily_from27-10-2023.pkl  SPY_dividends_2022-05-09_2024-04-22.csv  SPY_dividends_20231027_20250919.csv  ^VIX_1day_20231027_20251027.pkl  ^VIX_1day_20231103_20251103.pkl  daily_sp500.pkl  intraday_sp500.pkl
data/processed/: daily_pnl.pkl  trade_log.csv
data/raw/: SPY_1day_20220509_20240422.csv  SPY_daily_from27-10-2023.csv  SPY_daily_from27-10-2023.txt  ^VIX_1day_20220509_20240422.csv  ^VIX_1day_20231103_20251103.csv
intraday-momentum-spy-repro/src/analysis/: analyzer.py
notebooks/: clean_data_loading.ipynb  data_load.ipynb  raw_data_fetching_and_exploration.ipynb  replica_plswork.ipynb  replicating.ipynb
notebooks/data/processed/: df_daily_groups.pkl
src/classes/analysis/: analyzer.py
src/classes/analysis/Analyzer/: analyzer.py  computingstrat.py  data_generator.py  regression.py  sensitivity.py  testing_compute_perf_stats.py
src/classes/backtest/: default.py  engine.py
src/classes/data/: cleaner.py  loader.py  loader_giulia.py
src/classes/metrics/: metrics.py  tempCodeRunnerFile.py
src/classes/utils/: io.py
src/classes/viz/: plotter.py
src/data/processed/: daily_pnl.pkl  trade_log.csv
